* Spreedly: Update urls and terminology [duff]
* Make card brand error more user friendly [oggy]
* DataCash: Update test Mastercard number [jamesshipton]
* DataCash: Update test response fixtures [jamesshipton]
* Pin: Add Pin.js card token support [nagash]
* PayPal Express gateway: Fix error when no address information is in response [pierre]

== Version 1.31.1 (February 25, 2013)

* Cybersource: Bug fixes [natejgreene, jduff]

== Version 1.31.0 (February 20, 2013)

* Worldpay: XML encoding is required to be ISO-8859-1 [dougal]
* Worldpay: Add card code for more supported card types [dougal]
* Ogone: Add action option [pwoestelandt]
* PayPal Express gateway: Add support for BuyerEmailOptInEnable [chrisrbnelson]
* Add Paymill gateway [duff]
* Add EVO Canada gateway [alexdunae]
* Fixed credit card and check interface, used correct method for checking payment type [jduff]

== Version 1.30.0 (February 13, 2013)

* Add FirstData Global Gateway e4 [frobcode]
* PaymentExpress: Add support for optional fields: ClientType and TxnData [moklett]
* PaymentExpress: Limit MerchantReference/description to 64 chars [moklett]
* Wirecard: description must be no more than 32 characters [moklett]
* Litle: Add support for passing a token to the authorize and purchase methods [forest]
* PayPal Common: Allow searching for transactions by ProfileID [aq1018]
* Add Spreedly Core gateway [duff]
* eWay Gateway: Return proper value for authorization [duff]
* eWay Gateway: Add support for refunds [duff]
* Quickpay: Add support for protocols 5 & 6 [twarberg]
* Banwire gateway: Handle JSON::ParserError [duff]
* Balanced gateway: Fix unspecified marketplace [duff]
* QBMS gateway: Allow partial addresses [duff]
* Authorize.Net CIM: Allow omitting card expiration date [shanebonham]
* Authorize.Net CIM: Add support for extraOptions to createCustomerProfileTransaction [tpiekos]
* Add NETPAY gateway [samlown]
* Balanced gateway: Add amount to the refund method signature [ntalbott]